turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:15: error: too many arguments for method droite: ()Unit
  case 4 => droite(2);avance()
                  ^Turmite:31: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state=rule(getCouleurSol())(state)(ind)
                          ^